# openhare

./: .gitignore  Makefile  README.md  README.zh-CN.md  windows_build.ps1  windows_setup.iss
.github/workflows/: pages.yml
client/: analysis_options.yaml  pubspec.yaml
client/lib/: main.dart
client/lib/l10n/: app_en.arb  app_zh.arb
client/lib/models/: ai.dart  instances.dart  sessions.dart  settings.dart  tasks.dart  version_info.dart
client/lib/repositories/: objectbox-model.json  repo.dart
client/lib/repositories/ai/: agent.dart  chat.dart
client/lib/repositories/instances/: instances.dart  session_conn.dart
client/lib/repositories/sessions/: session_sql_result.dart  sessions.dart
client/lib/repositories/settings/: settings.dart
client/lib/repositories/tasks/: task.dart
client/lib/screens/: app.dart  page_skeleton.dart
client/lib/screens/about/: about.dart
client/lib/screens/instances/: instance_add.dart  instance_tables.dart  instance_update.dart  instances.dart
client/lib/screens/sessions/: session_add.dart  session_body.dart  session_drawer_body.dart  session_drawer_chat.dart  session_drawer_metadata.dart  session_drawer_sql_result.dart  session_operation_bar.dart  session_sql_editor.dart  session_sql_results.dart  session_status.dart  session_tabs.dart  sessions.dart
client/lib/screens/settings/: settings.dart
client/lib/screens/tasks/: export_data.dart  task.dart  task_overview.dart
client/lib/services/about/: about.dart
client/lib/services/ai/: agent.dart  chat.dart  llm_sdk.dart  prompt.dart  tool.dart  tool_query.dart
client/lib/services/instances/: instances.dart  metadata.dart
client/lib/services/sessions/: session_chat.dart  session_conn.dart  session_controller.dart  session_drawer.dart  session_metadata.dart  session_metadata_tree.dart  session_sql_editor.dart  session_sql_result.dart  sessions.dart
client/lib/services/tasks/: export_data.dart  overview.dart
client/lib/utils/: file_type.dart  file_utils.dart  fuzzy_match.dart  logger.dart  open_file.dart  reorder_list.dart  state_value.dart  time_format.dart  version.dart
client/lib/widgets/: button.dart  code_auto_complete.dart  data_grid.dart  data_tree.dart  data_type_icon.dart  dialog.dart  divider.dart  empty.dart  field.dart  form.dart  loading.dart  mention_text.dart  menu.dart  paginated_bar.dart  scroll.dart  split_view.dart  sql_highlight.dart  tab_widget.dart  theme.dart  tooltip.dart
client/linux/: CMakeLists.txt
client/macos/: Podfile
client/macos/Runner/: DebugProfile.entitlements  Release.entitlements
client/macos/Runner.xcodeproj/: project.pbxproj
client/macos/Runner/Configs/: AppInfo.xcconfig
client/test/: mention_text_test.dart
client/test/utils/: fuzzy_match_test.dart  time_format_test.dart
client/windows/runner/: Runner.rc
docs/: .gitignore  README.md
docs/site/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
docs/site/src/layouts/: BaseLayout.astro
docs/site/src/pages/: index.astro
docs/site/src/styles/: global.css
pkg/db_driver/: pubspec.yaml
pkg/db_driver/go_impl/: .gitignore
pkg/db_driver/go_impl/lib/: go_impl.dart  go_impl_bindings_generated.dart
pkg/db_driver/go_impl/macos/: go_impl.podspec
pkg/db_driver/impl/mssql/rust/: Cargo.toml
pkg/db_driver/impl/mssql/rust/src/: frb_generated.rs
pkg/db_driver/impl/mssql/rust/src/api/: init.rs  mod.rs  mssql.rs
pkg/db_driver/impl/oracle/src/: CMakeLists.txt  oracle.c  oracle.h
pkg/db_driver/impl/sqlite/rust/: Cargo.toml
pkg/db_driver/impl/sqlite/rust/src/: frb_generated.rs
pkg/db_driver/impl/sqlite/rust/src/api/: mod.rs  sqlite.rs
pkg/db_driver/test/: db_driver_metadata_test.dart
pkg/sql_parser/lib/: parser.dart
(+87 files in other folders)
