[package]
name = "mssql"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
chrono = "0.4"
futures-util = "0.3"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "time"] }
tokio = { version = "1", features = ["net", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
url = "2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
